kubernetes/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: database-web-app
  template:
    metadata:
      labels:
        app: database-web-app
    spec:
      containers:
      - name: database-web-app-container
        image: <your-dockerhub-username>/database-my-web-app:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database-web-app-service
spec:
  selector:
    app: database-web-app
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
