kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-web-app
  template:
    metadata:
      labels:
        app: frontend-web-app
    spec:
      containers:
      - name: frontend-web-app-container
        image: <your-dockerhub-username>/frontend-my-web-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-app-service
spec:
  selector:
    app: frontend-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
